--- a/.github/workflows/trivy_scan.yml
+++ b/.github/workflows/trivy_scan.yml
@@ -1,5 +1,5 @@
-name: "Container Security Scan with Trivy"
-
+- name: Container Security Scan with Trivy
+  uses: aquasecurity/trivy-action@v0.67.2
 on:
   push:
     branches: [ main ]
